[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rtmemory"
version = "0.1.0"
description = "Async Python SDK for RTMemory — temporal knowledge-graph driven AI memory"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.22",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"